<resources>
    <string name="app_name">WorkingHourManagement</string>
    <string name="show_tos">약관 보기</string>
    <string name="all_agree">전체 약관 동의</string>
    <string name="privacy_agree">(필수) 개인정보 수집 및 이용 동의</string>
    <string name="service_agree">(필수) 서비스 이용 동의</string>
    <string name="check_age">(필수) 만 15세 입니다</string>

    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="owner_login">오너 로그인</string>
    <string name="staff_login">직원 로그인</string>

    <string name="join">회원가입</string>
    <string name="owner">오너</string>
    <string name="staff">직원</string>
    <string name="owner_join">오너회원가입</string>
    <string name="staff_join">직원회원가입</string>

    <string name="birth">생년월일(선택)</string>
    <string name="business_num">사업자등록번호</string>
    <string name="representative_name">대표자명</string>
    <string name="store_name">매장명</string>
    <string name="name">이름</string>
    <string name="phone">휴대폰번호</string>
    <string name="update_phone">휴대폰번호 변경</string>
    <string name="certification">인증요청</string>
    <string name="resend">재전송하기</string>
    <string name="authentication_num">인증번호</string>

    <string name="bn_success">올바른 사업자 정보입니다.</string>
    <string name="bn_fail">사업자 정보를 찾을 수 없습니다.</string>

    <string name="auth_fail">인증에 실패했습니다.\n다시 시도해 주세요.</string>
    <string name="age_check_fail">만 14세 이상만\n가입할 수 있습니다.</string>
    <string name="already_join">이미 가입했어요!</string>
    <string name="auth_success">인증이 완료되었습니다.</string>

    <string name="change_passwd">비밀번호 변경</string>
    <string name="find_passwd">비밀번호 찾기</string>
    <string name="reset_passwd">비밀번호 재설정</string>
    <string name="current_passwd">현재 비밀번호</string>
    <string name="passwd">비밀번호</string>
    <string name="confirm_passwd">비밀번호 재입력</string>
    <string name="pre_passwd">현재 비밀번호</string>
    <string name="new_passwd">새로운 비밀번호</string>
    <string name="passwd_count">%d/20</string>
    <string name="account_entry_reason">* 알바비 지급을 위한 수집</string>
    <string name="account">계좌번호</string>

    <string name="withdrawal">회원탈퇴</string>
    <string name="Withdrawal_confirmation">회원 데이터를 모두 삭제하고\n오직에서 탈퇴하시겠습니까?></string>
    <string name="withdrawal_success">탈퇴가 완료되었습니다.</string>

    <string name="next">다음</string>
    <string name="ok">확인</string>
    <string name="check">조회</string>

    <string name="password_format">영문, 숫자 포함 8자리 이상</string>
    <string name="num_char20">0/20</string>
    <string name="password_disMatch">비밀번호가 일치하지 않습니다.</string>
    <string name="password_match">비밀번호 일치</string>
    <string name="input_info">회원 정보를 입력해주세요</string>
    <string name="auth_phone">휴대폰번호를 인증해주세요</string>
    <string name="input_current_pw">현재 비밀번호를 입력해주세요</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="input_newPw">새 비밀번호를 입력해주세요</string>

    <string name="input_phone_detail">본인 확인을 위해 번호를 인증해주세요</string>
    <string name="remainTime">%02d:%02d</string>
    <string name="birthDate">%d.%d.%d</string>
    <string name="complete_join">\'오직\' 회원이 되셨어요!</string>


    // 매장 관리 string list
    <string name="store_item_name">메가커피</string>
    <string name="store_item_sub_name">서울대학교 병원 2호점</string>
    <string name="title_store_conversion">매장 전환</string>
    <string name="register_store">매장 등록</string>
    <string name="modify_store_info">매장 정보 수정</string>
    <string name="delete_store">매장 삭제</string>
    <string name="delete">삭제하기</string>


    // 주소 검색 string list
    <string name="title_search_address">주소 검색</string>
    <string name="search_address_tip">아래와 같은 조합으로 검색을 하시면 더욱 정확한\n결과가 검색됩니다</string>
    <string name="tip">Tip</string>
    <string name="doro_plus_dept_no">도로명+건물번호</string>
    <string name="address_example2">예) 판교역로 235, 제주 첨단로 242</string>
    <string name="address_example1">예) 판교역로 235, 분당 주공, 삼평동 681</string>
    <string name="region_dong_li_address">지역명(동/리)+번지</string>
    <string name="region_dong_li_address_plus_dept_name">지역명(동/리)+건물명(아파트명)</string>
    <string name="mailbox_plus_no">사서함명+번호</string>

    <string name="value_zip_code">07997</string>
    <string name="title_doro_address">도로명</string>
    <string name="value_doro_address">서울 양천구 목동서로 155 (목동파라곤)</string>
    <string name="title_jibun_address">지번</string>
    <string name="value_jibun_address">서울 양천구 목동 917</string>
    <string name="primary_address_no">1</string>
    <string name="primary_address_total_count">/ 1</string>


    // 출퇴근 정보 string list
    <string name="title_commute_info">출퇴근 정보</string>
    <string name="title_allow_late">지각 허용 시간</string>
    <string name="title_allow_early_leave">조퇴 허용 시간</string>
    <string name="min_zero">0분</string>
    <string name="min_five">5분</string>
    <string name="min_ten">10분</string>
    <string name="min_fifteen">15분</string>
    <string name="min_twenty">20분</string>


    // 사업장 분류 string list
    <string name="title_store_type">사업장 분류</string>
    <string name="cafeteria">음식점</string>
    <string name="cafe">카페</string>
    <string name="convenience_store">편의점</string>
    <string name="pc_room">PC방</string>
    <string name="fitness_club">헬스장</string>
    <string name="academy">학원</string>
    <string name="office_help">사무보조</string>
    <string name="etc">기타</string>


    <string name="do_you_want_to_delete_store">매장을 삭제하시겠습니까?</string>
    <string name="do_you_want_to_register_store">매장을 등록하시겠습니까?</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>


    <string name="title_store_info">매장 정보</string>
    <string name="store_branch_name_choice">지점명 (선택)</string>
    <string name="please_enter_branch_name">지점명을 입력해주세요.</string>
    <string name="primary_address">기본 주소</string>
    <string name="search_address">주소 검색</string>
    <string name="detail_address">상세 주소</string>
    <string name="please_enter_detail_address">상세 주소를 입력해주세요.</string>
    <string name="choose">선택하기</string>
    <string name="register">등록하기</string>
    <string name="modify">수정하기</string>
    <string name="please_enter_store_name">매장명을 입력해주세요.</string>
    <string name="store_info_modify">정보 수정</string>
    <string name="title_important_schedule">중요 일정</string>
    <string name="twelve">12</string>
    <string name="month">월</string>
    <string name="nineteen">19</string>
    <string name="day">일</string>
    <string name="title_post_schedule">일정 등록</string>
    <string name="title">제목</string>
    <string name="input_schedule_content">일정 내용을 입력해 주세요.</string>
    <string name="color">컬러</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="title_modify_schedule">일정 수정</string>
    <string name="modify_complete">수정 완료</string>
    <string name="choose_complete">선택 완료</string>
    <string name="title_set_date">날짜 설정</string>
    <string name="title_set_time">시간 설정</string>
    <string name="schedule_is_modified">일정이 수정되었어요.</string>
    <string name="new_schedule_is_posted">새로운 일정이 등록 되었어요.</string>
    <string name="will_you_delete_schedule">일정을 삭제하시겠습니까?</string>

    <string name="show_password">입력한 비밀번호 보기</string>
    <string name="notification">알림</string>
    <string name="setting_notification">알림 설정</string>
    <string name="menu">메뉴</string>
    <string name="myPage">마이페이지</string>
    <string name="close">닫기</string>
    <string name="completed_store_registration">매장 등록을 완료했어요!</string>
    <string name="confirm">확인</string>
    <string name="input_authNum">인증번호를 입력해주세요</string>
    <string name="input_phone">휴대폰 번호를 입력해주세요</string>
    <string name="start">시작하기</string>

    <string name="HOME">홈</string>
    <string name="STORE">매장</string>
    <string name="WORK">근무</string>
    <string name="JUNG">정산</string>
    <string name="MY">MY</string>
    <string name="clear">초기화</string>
    <string name="select">선택</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="designation_owner">사장님</string>
    <string name="view_profile">프로필 보기</string>
    <string name="app_version">앱 버전</string>
    <string name="profile_info">프로필 정보</string>
    <string name="secession">탈퇴</string>
    <string name="email">이메일(선택)</string>
    <string name="save">저장하기</string>
    <string name="change">변경</string>
    <string name="reason_input_passwd">비밀번호 변경을 위해서 현재 비밀번호가 필요해요</string>
    <string name="input_email">이메일을 입력해주세요</string>
    <string name="yyyy_mm_dd">YYYY.MM.DD</string>
    <string name="birth_format">%04d.%02d.%02d</string>
    <string name="set_date">날짜 설정</string>
    <string name="do_you_want_to_modify_store_info">매장을 수정하시겠습니까?</string>
    <string name="completed_store_modification">매장 수정을 완료했어요!</string>
    <string name="tv_title_schedule_detail">일정 상세</string>
    <string name="title_staff_todo">해야할 일</string>
    <string name="title_staff_todo_detail">해야할 일 상세</string>
    <string name="todo">할 일</string>
    <string name="todo_start_time">업무 시작 시간</string>
    <string name="title_owner_post_staff_todo">해야할 일 등록</string>
    <string name="please_input">입력하세요</string>
    <string name="do_you_want_to_post_staff_todo">해야할 일을 등록하시겠습니까?</string>
    <string name="owner_completed_post_staff_todo">새로운 해야할 일을 등록했습니다.</string>
    <string name="title_owner_modify_staff_todo">해야할 일 수정</string>
    <string name="title_owner_notice_list">공지사항</string>
    <string name="title_owner_notice_detail">공지사항 상세</string>
    <string name="title_owner_post_notice">공지사항 등록</string>
    <string name="please_input_notice_title">제목을 입력해주세요.</string>
    <string name="please_input_notice_desc">내용을 입력해주세요.</string>
    <string name="num_char700">0/700</string>
    <string name="title_owner_modify_notice">공지사항 수정</string>
    <string name="invite">직원 초대</string>
    <string name="personal_info">인적사항</string>
    <string name="staff_list">직원 목록</string>
    <string name="manage_staff">직원 관리</string>
    <string name="staff_personal_info">직원 인적사항</string>

    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="add_working_schedule">근무 일정 추가</string>
    <string name="working_day">근무 요일</string>
    <string name="start_time">출근 시간</string>
    <string name="finish_time">퇴근 시간</string>
    <string name="gender">성별</string>
    <string name="birthdate">생년월일</string>
    <string name="work_info">근무 정보</string>
    <string name="staff_position">직급</string>
    <string name="hourly_wage">시급</string>
    <string name="work_papers">근무 서류</string>
    <string name="health_certificate">보건증</string>
    <string name="employment_contract">근로계약서</string>
    <string name="work_schedule">근무 일정</string>
    <string name="deleted">삭제</string>
    <string name="please_add_work_schedule">근무 일정을 추가해주세요</string>
    <string name="select_staff_position">직급 선택</string>
    <string name="owner_completed_modify_staff_todo">해야할 일을 수정했습니다.</string>
    <string name="won">원</string>
</resources>