<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_selector_drawable"
        android:title="@string/HOME" />

    <item
        android:id="@+id/store"
        android:icon="@drawable/ic_store_selector_drawable"
        android:title="@string/STORE" />

    <item
        android:id="@+id/work"
        android:icon="@drawable/ic_work_selector_drawable"
        android:title="@string/WORK" />

    <item
        android:id="@+id/jungsan"
        android:icon="@drawable/ic_jungsan_selector_drawable"
        android:title="@string/JUNG" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_selector_drawable"
        android:title="@string/MY" />
</menu>