<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/staff_join"
                android:textSize="17sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:id="@+id/scroll_staff_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/staff_join_btn_join"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">

                <EditText
                    android:id="@+id/staff_join_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/staff_join_edit_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/birth"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/staff_join_edit_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="3"
                        android:hint="@string/phone"
                        android:inputType="phone" />

                    <Button
                        android:id="@+id/owner_join_btn_auth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/certification" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/staff_join_edit_authenticationNum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/authentication_num"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/staff_join_text_remainTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="#ff0000"
                        tools:text="03:00" />

                    <Button
                        android:id="@+id/staff_join_btn_check"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ok" />
                </LinearLayout>
                <!--                잠시 공간 확보,,,-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/staff_join_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/passwd"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/staff_join_edit_passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/confirm_passwd"
                    android:inputType="textPassword" />
                <!--                잠시 공간 확보,,,-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/account"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="15dp"
                        android:text="@string/account_entry_reason" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/staff_join_edit_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/staff_join_btn_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color"
            android:text="@string/join"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>