<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_will_you_delete_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/will_you_delete_schedule"
            android:textSize="@dimen/body_text_size"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_will_you_delete_schedule">

            <Button
                android:id="@+id/btn_no_delete"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_app_color_corner_transparent_background"
                android:text="@string/no"
                android:textColor="@color/app_color"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_yes_delete"
                style="@style/neo_medium_white_style"
                android:background="@drawable/round_app_color_background"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>